@@ -80,7 +80,7 @@ DEFSYSCALL(gettimeofday, 78)
 DEFSYSCALL(settimeofday, 79)
 DEFSYSCALL(getgroups16, 80)
 DEFSYSCALL(setgroups16, 81)
-DEFSYSCALL(select, 82)
+DEFSYSCALL(oldselect, 82)
 DEFSYSCALL(symlink, 83)
 DEFSYSCALL(lstat, 84)
 DEFSYSCALL(readlink, 85)
@@ -140,7 +140,7 @@ DEFSYSCALL(setfsuid16, 138)
 DEFSYSCALL(setfsgid16, 139)
 DEFSYSCALL(llseek, 140)
 DEFSYSCALL(getdents, 141)
-DEFSYSCALL(select_142, 142)
+DEFSYSCALL(select, 142)
 DEFSYSCALL(flock, 143)
 DEFSYSCALL(msync, 144)
 DEFSYSCALL(readv, 145)
